--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/week6Grid/assets/normalize.css">
-    <link rel="stylesheet" href="/week6Grid/assets/style.css">
+    <link rel="stylesheet" href="./week6Grid/assets/normalize.css">
+    <link rel="stylesheet" href="./week6Grid/assets/style.css">
     <title>Document</title>
 </head>
 
